cluster/apps/default/pigallery2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pigallery2
  namespace: default
  labels:
    app.kubernetes.io/name: pigallery2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pigallery2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pigallery2
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   readOnlyRootFilesystem: true
      #   allowPrivilegeEscalation: false
      #   capabilities:
      #     drop:
      #       - ALL
      containers:
        - name: pigallery2
          image: bpatrik/pigallery2:1.9.3-debian-bullseye
          ports:
            - containerPort: 80
              name: pigallery2
              protocol: TCP
          securityContext:
            capabilities: {}
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 3000m
              memory: 1024Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
          volumeMounts:
            - name: photos
              mountPath: /app/data/images
              subPath: Fenykepek
              readOnly: true

      volumes:
        - name: photos
          persistentVolumeClaim:
            readOnly: true
            claimName: backup-share
