cluster/apps/default/pigallery2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pigallery2
  namespace: selfhosted
  annotations: {}
spec:
  ports:
    - name: pigallery2
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: pigallery2
