cluster/apps/default/pigallery2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pigallery2
  namespace: default
spec:
  rules:
    - host: &host "photos.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pigallery2
                port:
                  number: 80
  tls:
    - hosts:
        - *host
